--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -25,6 +26,9 @@ a, a.visited, a.active {
     color: var(--dodger);
     text-decoration: none;
 }
+a:hover {
+    color:white;
+}
 header {
     width: 100%;
     position: sticky;
@@ -32,18 +36,18 @@ header {
 }
 .navbar {
     background: var(--white);
-    height: 100px;
+    height: 6.2rem;
     border-bottom: 1px solid gray;
     box-shadow: 0 2px 8px var(--gray);
 }
 .container {
-    max-width: 1280px;
+    max-width: 84.5%;
     margin: 0 auto;
     padding: 0;   
 }
 .main-container {
-    max-width: 1100px;
-    margin: 80px auto;
+    max-width: 72.5%;
+    margin: 4.4rem auto;
 }
 ul {
     list-style-type: none;
@@ -53,7 +57,7 @@ ul {
 }
 .navbar .banner {
     display: block;
-    height: 90px;
+    height: 5.625rem;
 }
 /*
 .navbar a {
@@ -77,14 +81,14 @@ ul {
     display: flex;
 }
 .navbar li {
-    padding: 0 30px 0 30px;
+    padding: 0 1.875rem 0 1.875rem;
     border-right: 1px solid silver;
 }
 .navbar li:first-child {
     border-left: 1px solid silver;
 }
 section {
-    margin-left: 40px;
+    margin-left: 2.5rem;
 }
 footer {
     width: 100%;
@@ -99,9 +103,9 @@ footer {
 .footer-container {
     display: flex;
     justify-content: space-between;
-    width: 1100px;
+    width: 72.5%;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 1.875rem 0;
 }
 .col-1 {
     width: 33%;
@@ -183,4 +187,16 @@ h1, h2, h3, h4 {
   
   .navbar a:hover::before {
     transform: scaleX(1);
+  }
+
+  @media only screen and (max-width: 600px) {
+      .footer-container {
+          flex-direction: column;
+          width: 90%;
+      }
+      .col-1, .col-2, .col-3 {
+          width: 100%;
+          align-items: flex-start;
+          margin-bottom: 1.875rem;
+      }
   }
