--- a/main.css
+++ b/main.css
@@ -148,7 +148,7 @@ address {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 30px 0;
+    margin: 1.875rem 0;
 }
 .photo-container .thumb {
     width: 187px;
@@ -192,11 +192,16 @@ h1, h2, h3, h4 {
   @media only screen and (max-width: 600px) {
       .footer-container {
           flex-direction: column;
-          width: 90%;
+          width: 100%;
+          align-items: center;
       }
       .col-1, .col-2, .col-3 {
-          width: 100%;
+          width: 90%;
           align-items: flex-start;
-          margin-bottom: 1.875rem;
+          margin: 0 0 1.875rem 0;
+          padding: 0;
       }
+      .
+      .photo-container {
+          display: none;
   }
