--- a/main.css
+++ b/main.css
@@ -34,6 +34,8 @@ header {
     position: sticky;
     top: 0;
 }
+/* -- -- NAVIGATION -- -- */
+
 .navbar {
     background: var(--white);
     height: 6.2rem;
@@ -45,10 +47,7 @@ header {
     margin: 0 auto;
     padding: 0;   
 }
-.main-container {
-    max-width: 72.5%;
-    margin: 4.4rem auto;
-}
+
 ul {
     list-style-type: none;
 }
@@ -57,20 +56,9 @@ ul {
 }
 .navbar .banner {
     display: block;
-    height: 5.625rem;
+    height: 15em;
 }
-/*
-.navbar a {
-    position: relative;
-    color: var(--black);
-    text-decoration: none;
-    font-size: 16pt;
-    transition: box-shadow 0.2s linear;
-}
-.navbar a:hover {
-    box-shadow: 0 8px 0 var(--blue);
-}
-*/
+
 .navbar .container {
     display: flex;
     justify-content: space-between;
@@ -87,8 +75,41 @@ ul {
 .navbar li:first-child {
     border-left: 1px solid silver;
 }
+.navbar a {
+    position: relative;
+    color: #000;
+    font-size: 14pt;
+    text-decoration: none;
+  }
+.navbar a:hover {
+    color: #000;
+  }
+.navbar a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 8px;
+    bottom: -10px;
+    left: 0;
+    background-color: var(--blue);
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.3s ease;
+  }
+.navbar a:hover::before {
+    transform: scaleX(1);
+  }
+
+
+/* -- -- MAIN CONTENT -- -- */
+
 section {
     margin-left: 2.5rem;
+}
+.main-container {
+    max-width: 72.5%;
+    margin: 4.4rem auto;
 }
 footer {
     width: 100%;
@@ -159,36 +180,6 @@ h1, h2, h3, h4 {
     font-family: 'Playfair Display', serif;
     margin-bottom: 10px;
 }
-
-.navbar a {
-    position: relative;
-    color: #000;
-    font-size: 14pt;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    color: #000;
-  }
-  
-  .navbar a::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 8px;
-    bottom: -10px;
-    left: 0;
-    background-color: var(--blue);
-    transform: scaleX(0);
-    transform-origin: top left;
-    transition: transform 0.3s ease;
-  }
-  
-  .navbar a:hover::before {
-    transform: scaleX(1);
-  }
-
   @media only screen and (max-width: 600px) {
       h1 {
           font-size: x-large;
@@ -205,20 +196,36 @@ h1, h2, h3, h4 {
       }
       .footer-container {
           flex-direction: column;
-          width: 80%;
+          width: 100%;
           align-items: center;
           justify-content: space-around;
 
       }
       .col-1, .col-2, .col-3 {
-          width: 100%;
+          width: 8vw;
           align-items: flex-start;
-          margin: 0 0 1.875rem 0;
       }
       .thumb {
             width: 92vw;
             height: auto;
             margin-bottom: 15px;
         }
-
       }
+
+/* Responsiveness */
+@media (min-width: 768px) {
+    .nav{
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+    }
+    .menu li{
+        float: left;
+    }
+    .menu a:hover{
+        background-color: transparent;
+        color: var(--gray);
+    }
+}
